--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
     <link rel="preload" href="images/mail.json" as="fetch">
     <link rel="preload" as="image" href="images/project-1.jpg">
     <link rel="preload" as="image" href="images/project-2.jpg">
-    <link rel="preload" as="image" href="images/about.png">
+    <link rel="preload" as="image" href="images/about-circle.png">
     <link rel="preload" as="image" href="images/hero.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
