--- a/views/test.ejs
+++ b/views/test.ejs
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="preload" as="image" href="images/project-1.jpg">
     <link rel="preload" as="image" href="images/project-2.jpg">
-    <link rel="preload" as="image" href="images/about.png">
+    <link rel="preload" as="image" href="images/about-circle.png">
     <link rel="preload" as="image" href="images/hero.png">
     <style>
         #loader {
