--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,6 @@
         <img src="/images/logo.png" class="my-logo">
     </a>
     <img src="/images/menu.svg" class="hamburger" onclick="openNav()">
-
     <ul class="nav navbar-options">
         <li class="nav-item">
             <a id="home" class="nav-link p-2 navbar-p navbar-option" href="/">Home</a>
@@ -23,7 +22,7 @@
 <div id="mySidebar" class="sidebar hamburger">
     <ul id="mySidebarOptions" class="nav d-flex align-items-end flex-column">
         <li class="nav-item">
-            <a id="sidenav-home" class="sidebar-option active" href="/">Home</a>
+            <a id="sidenav-home" class="sidebar-option" href="/">Home</a>
         </li>
         <li class="nav-item">
             <a id="sidenav-works" class="sidebar-option" href="/works">Works</a>
