--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <div class="my-nav d-flex flex-md-row align-items-center bg-white box-shadow justify-content-between">
 
-    <a href="/" class="/-brand d-flex align-items-center my-0 mr-md-auto font-weight-normal brand">
+    <a href="/" class="brand">
         <img src="/images/logo.png" class="my-logo">
     </a>
     <img src="/images/menu.svg" class="hamburger" onclick="openNav()">
