--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,7 +102,7 @@
                     <div class="col-md-7 d-flex align-content-center flex-wrap name-section">
                         <h1 class="last-name animated fadeInUp">TRUONG</h1>
                         <h1 class="first-name last-name animated fadeInUp delay-025s">QUOC-DAT</h1>
-                        <a href="" class="my-home-link arrow animated fadeInUp delay-05s" id="to-project-button" name="to-project-button">my works</a>
+                        <a href="/works" class="my-home-link arrow animated fadeInUp delay-05s" id="to-project-button" name="to-project-button">my works</a>
                     </div>
                 </div>
             </div>
