--- a/views/tqdat.ejs
+++ b/views/tqdat.ejs
@@ -223,7 +223,7 @@
                             <p>Hi, I’m
                                 <span class="green">Quoc-Dat Truong</span>.
                             </p>
-                            <p> I'm a Vietnamese boy. I was born on May 13th 1999. I’m studying software development at Facaulty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span>                                or a
+                            <p> I'm a Vietnamese boy. I was born on May 13th 1999. I’m studying software development at Faculty of Information Technology, University of Science, Vietnam National University. I’m now looking for an internship as a <span class="green">product designer</span>                                or a
                                 <span class="green">web developer</span>. You can download my <a href="Dat-Truong-CV.pdf" class="green-link" download>CV</a> or my <a href="Dat-Truong-Graphic-portfolio.pdf" class="green-link" download>graphic design portfolio</a>.
                                 Also, check out more shots on <a href="https://dribbble.com/tqdat99" class="green-link" target="_blank">Dribbble</a> or <a href="https://vimeo.com/tqdat99" class="green-link" target="_blank">Vimeo</a>.
                                 <br/><br/>Besides, I have a special love for <span class="green">motion design</span>. I’m also available for short freelance motion projects. For example, some onboarding screens for mobile apps.
